--- a/DermAI_FinalTraining_Model_.ipynb
+++ b/DermAI_FinalTraining_Model_.ipynb
@@ -139,7 +139,7 @@
         },
         "outputId": "6e187d89-878d-445d-96e0-aa67952955ab"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         },
         "outputId": "d3ba7d7a-88d4-473e-e72d-d02bde18d1c6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,12 +189,11 @@
       "metadata": {
         "id": "7yJb-UioTBgr",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "e2fe8636-eef3-4b83-85f3-da33db67f90a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "MtslpsqEsU88"
       },
@@ -276,7 +275,7 @@
       "metadata": {
         "id": "KO0Dubm6tC_4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +303,7 @@
         },
         "outputId": "c4975679-dd86-42fd-f703-6648bb64e048"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,7 +335,7 @@
         },
         "outputId": "65b52591-5aab-44a5-81ad-69d587c2d0b0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +374,7 @@
         },
         "outputId": "8f37466f-95ad-4287-c3d3-f9f4e0881989"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,7 +438,7 @@
         },
         "outputId": "934a3cd9-4f70-4358-ec9c-af2fcb0392f2"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -480,12 +479,11 @@
       "metadata": {
         "id": "1qygJ4X3y1Lx",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c9aca441-4204-4dd4-c945-ffd1e5e46447"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -532,7 +530,7 @@
         },
         "outputId": "464a000e-fee8-46bc-e8ee-848de745def5"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "d8hnWIppDKDF"
       },
@@ -605,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "nKyxJfbVFAhQ",
         "colab": {
@@ -699,7 +697,7 @@
         },
         "outputId": "51b18efa-cae9-4f64-bb59-528b3287bc78"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "LkR6aL9QFxkH",
         "colab": {
@@ -849,7 +847,7 @@
         },
         "outputId": "01be1423-7e9a-4ceb-fc0c-58ca07e8e3df"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +906,7 @@
         },
         "outputId": "f690ff77-f198-47b4-9bb1-9b4b41ccc0ff"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -990,7 +988,7 @@
         },
         "outputId": "251b1b71-a09d-47f9-87b7-80673d97d83e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1064,7 @@
         },
         "outputId": "b477f082-73ef-4431-9f52-4842fc1d7ebb"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1138,7 @@
         },
         "outputId": "cd413ce6-6cea-4045-c996-d1d80648d697"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1210,7 +1208,7 @@
         },
         "outputId": "95d0b595-fd42-4bd9-c813-01ad93833a57"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1237,7 +1235,7 @@
         "id": "eSfYMegmIoDP",
         "outputId": "43fbba2c-7825-4ebe-e9b6-e140dd433d5b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1291,7 @@
       "metadata": {
         "id": "OYNLpsMP_gOv"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1348,7 +1346,7 @@
       "metadata": {
         "id": "-2HlIPv1AOwL"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1394,7 +1392,7 @@
       "metadata": {
         "id": "wWe4SVB9AvLM"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1455,7 +1453,7 @@
       "metadata": {
         "id": "XCXoKrO6BBtU"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1504,7 +1502,7 @@
       "metadata": {
         "id": "rQLWn4wABn9z"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,7 +1561,7 @@
       "metadata": {
         "id": "Ac2AQd17B1XZ"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1616,7 +1614,7 @@
         },
         "outputId": "79b3c1cb-746c-4077-c596-356e0dc80a0d"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1684,7 @@
         "\n",
         "print(\"Training history loaded from CSV.\")"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,7 +1745,7 @@
         "plot_combined_roc_curves(true, preds_prob, test_true, test_preds_prob)\n",
         "print(\"_\"*60)\n"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
