--- a/DermAI_FinalTraining_Model .ipynb
+++ b/DermAI_FinalTraining_Model .ipynb
@@ -956,7 +956,25 @@
             "Epoch 19: val_loss did not improve from 0.09112\n",
             "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m271s\u001b[0m 555ms/step - accuracy: 0.8022 - auc: 0.9010 - loss: 0.1006 - precision: 0.6484 - recall: 0.8310 - val_accuracy: 0.8010 - val_auc: 0.9098 - val_loss: 0.1031 - val_precision: 0.6369 - val_recall: 0.8728 - learning_rate: 1.2500e-06\n",
             "Epoch 20/50\n",
-            "\u001b[1m456/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━\u001b[0m \u001b[1m17s\u001b[0m 536ms/step - accuracy: 0.8053 - auc: 0.9025 - loss: 0.1004 - precision: 0.6559 - recall: 0.8220"
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 536ms/step - accuracy: 0.8054 - auc: 0.9026 - loss: 0.1003 - precision: 0.6558 - recall: 0.8223\n",
+            "Epoch 20: val_loss did not improve from 0.09112\n",
+            "\n",
+            "Epoch 20: ReduceLROnPlateau reducing learning rate to 6.24999984211172e-07.\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m270s\u001b[0m 553ms/step - accuracy: 0.8054 - auc: 0.9026 - loss: 0.1003 - precision: 0.6558 - recall: 0.8224 - val_accuracy: 0.7887 - val_auc: 0.9093 - val_loss: 0.0995 - val_precision: 0.6194 - val_recall: 0.8728 - learning_rate: 1.2500e-06\n",
+            "Epoch 21/50\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 535ms/step - accuracy: 0.8057 - auc: 0.9070 - loss: 0.0984 - precision: 0.6534 - recall: 0.8440\n",
+            "Epoch 21: val_loss did not improve from 0.09112\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m321s\u001b[0m 552ms/step - accuracy: 0.8057 - auc: 0.9070 - loss: 0.0984 - precision: 0.6534 - recall: 0.8440 - val_accuracy: 0.8267 - val_auc: 0.9093 - val_loss: 0.0916 - val_precision: 0.7096 - val_recall: 0.7713 - learning_rate: 6.2500e-07\n",
+            "Epoch 22/50\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 538ms/step - accuracy: 0.8079 - auc: 0.9071 - loss: 0.0977 - precision: 0.6543 - recall: 0.8336\n",
+            "Epoch 22: val_loss did not improve from 0.09112\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m270s\u001b[0m 554ms/step - accuracy: 0.8079 - auc: 0.9071 - loss: 0.0977 - precision: 0.6543 - recall: 0.8337 - val_accuracy: 0.8062 - val_auc: 0.9111 - val_loss: 0.0962 - val_precision: 0.6552 - val_recall: 0.8261 - learning_rate: 6.2500e-07\n",
+            "Epoch 23/50\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 538ms/step - accuracy: 0.8042 - auc: 0.9028 - loss: 0.1006 - precision: 0.6541 - recall: 0.8306\n",
+            "Epoch 23: val_loss improved from 0.09112 to 0.08881, saving model to /content/drive/MyDrive/DermAI_FinalTraining_Model/final_model_best.keras\n",
+            "\u001b[1m488/488\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m272s\u001b[0m 558ms/step - accuracy: 0.8042 - auc: 0.9028 - loss: 0.1006 - precision: 0.6541 - recall: 0.8307 - val_accuracy: 0.8446 - val_auc: 0.9087 - val_loss: 0.0888 - val_precision: 0.8023 - val_recall: 0.6795 - learning_rate: 6.2500e-07\n",
+            "Epoch 24/50\n",
+            "\u001b[1m152/488\u001b[0m \u001b[32m━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━\u001b[0m \u001b[1m3:13\u001b[0m 575ms/step - accuracy: 0.8167 - auc: 0.9146 - loss: 0.0919 - precision: 0.6502 - recall: 0.8454"
           ]
         }
       ],
